[package]
name = "trassel"
version = "1.0.0"
authors = ["Tristan Farkas <tristan@farkas.st>"]
edition = "2018"
description = "Unique ID integers that scale."
categories = ["algorithms"]
keywords = ["id", "scale"]
license = "MIT"
repository = "https://github.com/trilleplay/trassel.git"

[dependencies]
time = "0.1.42"
